--- a/index.html
+++ b/index.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="(root)/style.css">
-  </head>
-  <body>
-    
-    <h1>Placeholder (toatally not compied from anywhere ;)</h1>
-
-  </body>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Joffical</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+  <h1>Placeholder</h1>
+</body>
 </html>
