--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>Placeholder</h1>
-</body>
+  <div id="particles-js">
+    <div class="container">
+      <h1>Placeholder</h1>
+    </div>
+  </div>
 </html>
