--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <div id="particles-js">
     <div class="container">
-      <h1>Placeholder</h1>
+      <h1>chromebook kinda bad ngl (placeholder)</h1>
     </div>
   </div>
 </html>
