--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <div id="particles-js">
     <div class="container">
-      <h1>idk(placeholder)</h1>
+      <h1>4 big guys(placeholder)</h1>
     </div>
   </div>
 </html>
