--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <div id="particles-js">
     <div class="container">
-      <h1>more people should people cuz people poeplelwldkwelekjrkjrkh23khJIOAHUJUGAGUGUI(placeholder)</h1>
+      <h1>Nextcloud coming soon ;)(placeholder)</h1>
     </div>
   </div>
 </html>
