--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <div id="particles-js">
     <div class="container">
-      <h1>MDM reviews soon???</h1>
+      <h1>Nextcloud will be hosted at nc.jofficial.me soon! Also, a minecraft server is hosted at mc.jofficial.me on version 1.20.4</h1>
     </div>
   </div>
 </html>
