--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <div id="particles-js">
     <div class="container">
-      <h1>wooo nextcolud is dead once again :fire:</h1>
+      <h1>wooo nextcloud is dead once again :fire:</h1>
     </div>
   </div>
 </html>
