--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <div id="particles-js">
     <div class="container">
-      <h1>wooo nextcloud is dead once again :fire: (also this font getting updated fr)</h1>
+      <h1>wooo nextcloud is dead once again :fire: (also, microsoft bad)</h1>
     </div>
   </div>
 </html>
