--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <div id="particles-js">
     <div class="container">
-      <h1>funni button ooo</h1>
+      <h1>funni button ooo (ew why does it look like that)</h1>
 	  <button>this button does nothing lol</button>
     </div>
   </div>
