--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
 <body>
   <div id="particles-js">
     <div class="container">
-      <h1>funni button ooo (ew why does it look like that)</h1>
-	  <button>this button does nothing lol</button>
+      <h1>funni button ooo</h1>
+	  <button class="btn">this button does nothing lol</button>
+	 
     </div>
   </div>
 </html>
