--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <div class="container">
       <h1>funni button ooo</h1>
 	  <button class="btn">this button does nothing lol</button>
+	  <button class="btn">this also does noting :)</button>
 	 
     </div>
   </div>
