--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
     <div class="container">
       <h1>funni button ooo</h1>
 	  <button class="btn">this button does nothing lol</button>
+	  <a class="btn" href="https://status.jofficial.me/">
+	  Status page
+	  </a>
+	 
     </div>
   </div>
 </html>
