--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
 <body>
   <div id="particles-js">
     <div class="container">
-      <h1>funni button ooo</h1>
-	  <button class="btn">this button does nothing lol</button>
+      <h1>wowzers status page button :fire:</h1>
 	  <a class="btn" href="https://status.jofficial.me/">
 	  Status page
 	  </a>
