--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Placeholder</title>
   <link rel="stylesheet" href="style.css">
-  <link rel= "shortcut icon" "type=image/ico" href="favicon"/>
+  <link rel= "icon" "type=image/ico" href="favicon.ico"/>
 </head>
 <body>
   <div id="particles-js">
