--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <div id="particles-js">
     <div class="container">
-      <h1>wowzers status page button :fire:</h1>
+      <h1>proxmox died :fire:</h1>
 	  <a class="btn" href="https://status.jofficial.me/">
 	  Status page
 	  </a>
