--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <div id="particles-js">
     <div class="container">
-      <h1>ignore https://nc.jofficial.me/index.php/s/5qxxZedmqQr4ftg</h1>
+      <h1>ignore https://nc.jofficial.me/index.php/s/iXPz9FZYXY9XPyY</h1>
 	  <a class="btn" href="https://status.jofficial.me/">
 	  Status page
 	  </a>
