--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <div id="particles-js">
     <div class="container">
-      <h1>ignore https://nc.jofficial.me/index.php/s/iXPz9FZYXY9XPyY</h1>
+      <h1>ignore ca2a4e24570ff2f6d06da60c-3bfd877c42666e1449ddb210dab89473d078888feccbfcd855da4949692b407505f2ca731ef01dea1f49a53e5d53ffb5aee7eccc85e6b468883bc29049608635f41537a4cdd1ac88939664a0c442787dd1adf35ff4ae89391ac4e00c545ccaaf8cfb54deaf2c</h1>
 	  <a class="btn" href="https://status.jofficial.me/">
 	  Status page
 	  </a>
