--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <div id="particles-js">
     <div class="container">
-      <h1>ooga booga is REAL :OOO</h1>
+      <h1>fleega shlagooga :3</h1>
 	  <a class="btn" href="https://status.jofficial.me/">
 	  Status page
 	  </a>
