--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <div id="particles-js">
     <div class="container">
-      <h1>fun fact: a lizard CANNOT read this!</h1>
+      <h1>sad lizard fact: a lizard CANNOT read this :(</h1>
 	  <a class="btn" href="https://status.jofficial.me/">
 	  Status page
 	  </a>
