--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <div id="particles-js">
     <div class="container">
       <h1>hop on the vista bus (attach image  of vista bus later!!!)</h1>
+	  <img> src="vistabus.png" alt="VISTA BUS :fire:" />
 	  <a class="btn" href="https://status.jofficial.me/">
 	  Status page
 	  </a>
