--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <body>
   <div id="particles-js">
     <div class="container">
-      <h1>hop on the vista bus (attach image  of vista bus later!!!)</h1>
-	  <img> src="images/vistabus.bmp" alt="VISTA BUS :fire:" />
+      <h1>hop on the vista bus)</h1>
+	  <img> src="https://jofficial.me/images/vistabus.bmp" alt="VISTA BUS :fire:" />
 	  <a class="btn" href="https://status.jofficial.me/">
 	  Status page
 	  </a>
