--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <div id="particles-js">
     <div class="container">
       <h1>hop on the vista bus)</h1>
-	  <img> src="https://jofficial.me/images/vistabus.bmp" alt="VISTA BUS :fire:" />
+	 	<img src="images/vistabus.jpg" alt="vista bus" width="500" height="600">
 	  <a class="btn" href="https://status.jofficial.me/">
 	  Status page
 	  </a>
