--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Placeholder</title>
-  <meta content="vista bus" property="og:title" />
+  <meta content="click here to hop on the vista bus NOW!" property="og:title" />
+  <meta content="want to hop on the VISTA BUS? go here TODAY!" property="og:description" />
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
