--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Placeholder</title>
   <meta content="click here to hop on the vista bus NOW!" property="og:title" />
   <meta content="want to hop on the VISTA BUS? go here TODAY!" property="og:description" />
-  <meta content="images/vistabus.jpg" property="og:image" />
+  <meta content="https://jofficial.me/images/vistabus.jpg" property="og:image" />
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
