--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   <meta content="click here to hop on the vista bus NOW!" property="og:title" />
   <meta content="want to hop on the VISTA BUS? go here TODAY!" property="og:description" />
   <meta content="https://jofficial.me/images/vistabus.jpg" property="og:image" />
+  <meta content='1200' property='og:image:width'>
+  <meta content='630' property='og:image:height'>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
