--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <meta content="https://jofficial.me/images/vistabus.jpg" property="og:image" />
   <meta content='1200' property='og:image:width'>
   <meta content='630' property='og:image:height'>
+  <meta name="twitter:card" content="summary_large_image">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
