--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
   <meta content="want to hop on the VISTA BUS? go here TODAY!" property="og:description" />
   <meta content="#89fc01" data-react-helmet="true" name="theme-color" />
   <meta content="https://jofficial.me/images/vistabus.jpg" property="og:image" />
-  <meta content='500' property='og:image:width'>
-<meta content='630' property='og:image:height'>
+  <meta name="twitter:card" content="summary_large_image">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
