--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Placeholder</title>
+  <title>vista bus</title>
   <meta content="click here to hop on the vista bus NOW!" property="og:title" />
   <meta content="want to hop on the VISTA BUS? go here TODAY!" property="og:description" />
   <meta content="#89fc01" data-react-helmet="true" name="theme-color" />
