--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>vista bus</title>
+  <title>vista bus world</title>
   <meta content="click here to hop on the vista bus NOW!" property="og:title" />
   <meta content="want to hop on the VISTA BUS? go here TODAY!" property="og:description" />
   <meta content="#89fc01" data-react-helmet="true" name="theme-color" />
@@ -14,7 +14,7 @@
 <body>
   <div id="particles-js">
     <div class="container">
-      <h1>hop on the vista bus)</h1>
+      <h1>hop on the vista bus</h1>
 	 <img src="images/vistabus.jpg" alt="vista bus" width="600" height="100">
 	  <a class="btn" href="https://status.jofficial.me/">
 	  Status page
