--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <div class="container">
       <h1>you WILL hop on the vista bus. no excuses</h1>
 	 <img src="images/vistabus.jpg" alt="vista bus" width="600" height="100">
+	<h1>hehe long vista bus</h1>
 	  <a class="btn" href="https://status.jofficial.me/">
 	  Status page
 	  </a>
