--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
   <div id="particles-js">
     <div class="container">
-      <h1>you WILL hop on the vista bus. no excuses</h1>
+      <h1>welcome to hell!</h1>
 	 <img src="images/vistabus.jpg" alt="vista bus" width="600" height="100">
 	<h1>hehe long vista bus</h1>
 	  <a class="btn" href="https://status.jofficial.me/">
