--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="container">
       <h1>welcome to hell!</h1>
 	 <img src="images/vistabus.jpg" alt="vista bus" width="600" height="100">
-	<img src="images/diddy.png" alt="vista bus" width="550" height="100">
+	<img src="images/diddy.png" alt="DIDDY ESCAPING :O" width="600" height="345">
 	<h1>DIDDY IS ESCAPING OH GOD RUN</h1>
 	  <a class="btn" href="https://status.jofficial.me/">
 	  Status page
