--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>vista bus world</title>
-  <meta content="click here to hop on the vista bus NOW!" property="og:title" />
-  <meta content="want to hop on the VISTA BUS? go here TODAY!" property="og:description" />
+  <title>DIDDY HAZ TAKEN OVER</title>
+  <meta content="click here to FREE DIDDY!" property="og:title" />
+  <meta content=YOU ARE REQUIRED TO CLICK THIS. CLICKING WILL ALSO FREE DIDDY!" property="og:description" />
   <meta content="#89fc01" data-react-helmet="true" name="theme-color" />
-  <meta content="https://jofficial.me/images/vistabus.jpg" property="og:image" />
+  <meta content="https://jofficial.me/images/diddy.jpg" property="og:image" />
   <meta name="twitter:card" content="summary_large_image">
   <link rel="stylesheet" href="style.css">
 </head>
