--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta content="click here to FREE DIDDY!" property="og:title" />
   <meta content=YOU ARE REQUIRED TO CLICK THIS. CLICKING WILL ALSO FREE DIDDY!" property="og:description" />
   <meta content="#89fc01" data-react-helmet="true" name="theme-color" />
-  <meta content="https://jofficial.me/images/diddy.jpg" property="og:image" />
+  <meta content="https://jofficial.me/images/diddy.png" property="og:image" />
   <meta name="twitter:card" content="summary_large_image">
   <link rel="stylesheet" href="style.css">
 </head>
@@ -15,7 +15,7 @@
   <div id="particles-js">
     <div class="container">
       <h1>welcome to hell!</h1>
-	 <img src="images/vistabus.jpg" alt="vista bus" width="600" height="100">
+	 <img src="images/diddy.png" alt="ALSO DIDDY????" width="600" height="100">
 	<img src="images/diddy.png" alt="DIDDY ESCAPING :O" width="800" height="345">
 	<h1>DIDDY IS ESCAPING OH GOD RUN</h1>
 	  <a class="btn" href="https://status.jofficial.me/">
