--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>DIDDY HAZ TAKEN OVER</title>
   <meta content="click here to FREE DIDDY!" property="og:title" />
-  <meta content=YOU ARE REQUIRED TO CLICK THIS. CLICKING WILL ALSO FREE DIDDY!" property="og:description" />
+  <meta content="YOU ARE REQUIRED TO CLICK THIS. CLICKING WILL ALSO FREE DIDDY!" property="og:description" />
   <meta content="#89fc01" data-react-helmet="true" name="theme-color" />
   <meta content="https://jofficial.me/images/diddy.png" property="og:image" />
   <meta name="twitter:card" content="summary_large_image">
