--- a/index.html
+++ b/index.html
@@ -21,9 +21,8 @@
   gtag('config', 'G-HJ13J9KTWG');
 </script>
 <body>
-  <div id="particles-js">
     <div class="container">
-      <h1>welcome to hell!</h1>
+      <h1>DIDDY GON DIDDLE YOU LIL ZAWG</h1>
 	 <img src="images/diddy.png" alt="ALSO DIDDY????" width="600" height="100">
 	<img src="images/diddy.png" alt="DIDDY ESCAPING :O" width="800" height="345">
 	<h1>DIDDY IS ESCAPING OH GOD RUN</h1>
