--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 	 <img src="images/diddy.png" alt="ALSO DIDDY????" width="600" height="100">
 	<img src="images/diddy.png" alt="DIDDY ESCAPING :O" width="800" height="345">
 	<h1>DIDDY IS ESCAPING OH GOD RUN</h1>
+  <h1>unrelated to DIDDY but gh codespaces kinda fire????</h1>
 	  <a class="btn" href="https://status.jofficial.me/">
 	  Status page
 	  </a>
