yooo new diddys corner dropped

--- a/diddyscorner/diddyscorner2/diddyscorner3/index.html
+++ b/diddyscorner/diddyscorner2/diddyscorner3/index.html
@@ -1,9 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <title>go away</title>
-    </head>
-    <body>
-        <h1>go away you dont get this yet</h1>
-    </body>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>diddys corner</title>
+    <link rel="stylesheet" href="style.css">
+  </head>
+  <body>
+    <div class="container">
+      <h1>WHY IS THERE SO MUCH BABY OIL?!?!?!?!?!?!?</h1>
+	 <img src="/diddyscorner/images/babyoil.webp" alt="WHY IS THERE SO MUCH" width="350" height="200">
+    <p>sorry, i think that was my baby oil pantry. try the other one!</p>
+	  <a class="btn" href="diddyscorner4/">
+	  try the other one...
+	  </a>
+	 
+    </div>
+  </div>
 </html>
