--- a/diddyscorner/index.html
+++ b/diddyscorner/index.html
@@ -13,9 +13,9 @@
   <body>
     <div class="container">
       <h1>welcome to diddys corner.</h1>
-	 <img src="images/diddy.jpg" alt="your freind diddy." width="350" height="200">
+	 <img src="/diddyimages/diddy.jpg" alt="your freind diddy." width="350" height="200">
     <p>welcome freind! my name is diddy. why dont you come inside my house?</p>
-	  <a class="btn" href="diddyscorner2/">
+	  <a class="btn" href="/diddyscorner2/">
 	  click here to enter his house
 	  </a>
 	 
