--- a/diddyscorner2/index.html
+++ b/diddyscorner2/index.html
@@ -8,9 +8,9 @@
   <body>
     <div class="container">
       <h1>inside diddys house...</h1>
-	 <img src="/diddyscorner/images/diddy2.webp" alt="your freind diddy." width="350" height="200">
+	 <img src="/diddyimages/diddy2.webp" alt="your freind diddy." width="350" height="200">
     <p>hope you like my house! watch your step though. i spilled some uh... milk and.. water? on the floor. if you want, take some food from the pantry. dont worry about the baby oil.</p>
-	  <a class="btn" href="diddyscorner3/">
+	  <a class="btn" href="/diddyscorner3/">
 	  open the pantry..
 	  </a>
 	 
