--- a/diddyscorner3/index.html
+++ b/diddyscorner3/index.html
@@ -8,9 +8,9 @@
   <body>
     <div class="container">
       <h1>WHY IS THERE SO MUCH BABY OIL?!?!?!?!?!?!?</h1>
-	 <img src="/diddyscorner/images/babyoil.webp" alt="WHY IS THERE SO MUCH" width="350" height="200">
+	 <img src="/diddyimages/babyoil.webp" alt="WHY IS THERE SO MUCH" width="350" height="200">
     <p>sorry, i think that was my baby oil pantry. try the other one!</p>
-	  <a class="btn" href="diddyscorner4/">
+	  <a class="btn" href="/diddyscorner4/">
 	  try the other one...
 	  </a>
 	 
