--- a/diddyscorner4/index.html
+++ b/diddyscorner4/index.html
@@ -5,5 +5,8 @@
     </head>
     <body>
         <h1>go away you dont get this yet</h1>
+        <a class="btn" href="/">
+            go back
+            </a>
     </body>
 </html>
