--- a/diddyscorner4/index.html
+++ b/diddyscorner4/index.html
@@ -6,7 +6,7 @@
     <body>
         <h1>go away you dont get this yet</h1>
         <a class="btn" href="/">
-            go back
+            exit diddys corner (rare chance)
             </a>
     </body>
 </html>
