--- a/diddyscorner4/index.html
+++ b/diddyscorner4/index.html
@@ -3,6 +3,9 @@
     <head>
         <title>go away</title>
     </head>
+    <script>
+        console.log("why are you looking in the console? its literally a placeholder...")
+    </script>
     <body>
         <h1>go away you dont get this yet</h1>
         <a class="btn" href="/">
