yooo new diddys corner dropped

--- a/diddyscorner3/index.html
+++ b/diddyscorner3/index.html
@@ -5,7 +5,7 @@
     <title>diddys corner</title>
     <link rel="stylesheet" href="style.css">
   </head>
-  <body>
+  <body
     <div class="container">
       <h1>WHY IS THERE SO MUCH BABY OIL?!?!?!?!?!?!?</h1>
 	 <img src="/diddyimages/babyoil.webp" alt="WHY IS THERE SO MUCH" width="350" height="200">
