--- a/diddyscorner4/index.html
+++ b/diddyscorner4/index.html
@@ -1,15 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <title>go away</title>
-    </head>
-    <script>
-        console.log("why are you looking in the console? its literally a placeholder...")
-    </script>
-    <body>
-        <h1>go away you dont get this yet</h1>
-        <a class="btn" href="/">
-            exit diddys corner (rare chance)
-            </a>
-    </body>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>diddys corner</title>
+    <link rel="stylesheet" href="style.css">
+  </head>
+  <body>
+    <div class="container">
+      <h1>THIS ONE TOO???</h1>
+	 <img src="/diddyimages/morebabyoil.webp" alt="WHY IS THERE SO MUCH" width="350" height="200">
+    <p>oh right, i forgot i repurposed that. forget about food. lets go to my bedroom instead.</p>
+	  <a class="btn" href="/diddyscorner5/">
+	  proceed with caution
+	  </a>
+	 
+    </div>
+  </div>
 </html>
