--- a/diddyscorner5/index.html
+++ b/diddyscorner5/index.html
@@ -1,11 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <title>go away</title>
-    </head>
-    <body>
-        <h1>go away you dont get this part yet</h1>
-        <a class="btn" href="/">
-            exit diddys corner (rare chance)
-        </a>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>diddys corner</title>
+    <link rel="stylesheet" href="style.css">
+  </head>
+  <body>
+    <div class="container">
+      <h1>You fell inside Diddy's dungeon...</h1>
+	 <img src="/diddyimages/diddydungeon.jpg" alt="diddys dungeon" width="350" height="200">
+    <p>UH DONT WORRY ABOUT THAT UHHH JUST GO FORWARD UNTIL YOU GET TO MICHEAL JACKSONS HOUSE</p>
+	  <a class="btn" href="/diddyscorner6/">
+	  go through the tunnel to micheal jacksons home...
+	  </a>
+	 
+    </div>
+  </div>
 </html>
