conclusion of diddys corner.

--- a/diddyscorner6/index.html
+++ b/diddyscorner6/index.html
@@ -1,12 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <title>go away</title>
-    </head>
-    <body>
-        <h1>go away you dont get this part yet</h1>
-        <a class="btn" href="/">
-            exit diddys corner (rare chance)
-        </a>
-    </body>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>diddys corner</title>
+    <link rel="stylesheet" href="style.css">
+  </head>
+  <body>
+    <div class="container">
+      <h1>You reach a dead end.. Was this a TRAP???</h1>
+     <img src="/diddyimages/wall.jpg" alt="diddys dungeon" width="350" height="200">
+    <p>come here BOY. imma get you.</p>
+      <a class="btn" href="/diddyscornerFinal/">
+      Give up.
+      </a>
+     
+    </div>
+  </div>
 </html>
