status page now opens in a new tab

--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
 	<img src="images/diddy.png" alt="DIDDY ESCAPING :O" width="800" height="345">
 	<h1>DIDDY IS ESCAPING OH GOD RUN</h1>
   <h1>hmmm whats that second button down there?</h1>
-	  <a class="btn" href="https://status.jofficial.me/">
-	  Status page
-	  </a>
+    <a class="btn" href="https://status.jofficial.me/" target="_blank">
+      Status page
+    </a>
     <a class="btn" href="diddyscorner/">
     you sould click this
     </a>
