--- a/diddyscorner/index.html
+++ b/diddyscorner/index.html
@@ -13,8 +13,8 @@
   <body>
     <div class="container">
       <h1>welcome to diddys corner.</h1>
-	 <img src="/diddyimages/diddy.jpg" alt="your freind diddy." width="350" height="200">
-    <p>welcome freind! my name is diddy. why dont you come inside my house?</p>
+	 <img src="/diddyimages/diddy.jpg" alt="your friend diddy." width="350" height="200">
+    <p>welcome friend! my name is diddy. why dont you come inside my house?</p>
 	  <a class="btn" href="/diddyscorner2/">
 	  click here to enter his house
 	  </a>
