--- a/index.html
+++ b/index.html
@@ -3,12 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>DIDDY HAZ TAKEN OVER</title>
-  <meta content="click here to FREE DIDDY!" property="og:title" />
-  <meta content="YOU ARE REQUIRED TO CLICK THIS. CLICKING WILL ALSO FREE DIDDY!" property="og:description" />
+  <title>(J))</title>
+  <meta content=")(J)" property="og:title" />
+  <meta content="Home for services hosted by (J)" property="og:description" />
   <meta content="#89fc01" data-react-helmet="true" name="theme-color" />
-  <meta content="https://jofficial.me/images/diddy.png" property="og:image" />
-  <meta name="twitter:card" content="summary_large_image">
   <link rel="stylesheet" href="style.css">
 </head>
 <!-- Google tag (gtag.js) -->
@@ -22,17 +20,15 @@
 </script>
 <body>
     <div class="container">
-      <h1>DIDDY GON DIDDLE YOU LIL ZAWG</h1>
-	 <img src="images/diddy.png" alt="ALSO DIDDY????" width="600" height="100">
-	<img src="images/diddy.png" alt="DIDDY ESCAPING :O" width="800" height="345">
-	<h1>DIDDY IS ESCAPING OH GOD RUN</h1>
-  <h1>hmmm whats that second button down there?</h1>
-    <a class="btn" href="https://status.jofficial.me/" target="_blank">
-      Status page
-    </a>
-    <a class="btn" href="diddyscorner/">
-    you sould click this
-    </a>
+    <h1>Welcome. This page holds nothing special apparently due to being "Misleading" even though it was not. (Thanks google!). Just some links and a privacy policy to make Google happy...</h1>
+    <nav>
+      <ul>
+        <li><a href="https://nc.jofficial.me">(J)Cloud</a></li>
+        <li><a href="https://status.jofficial.me/">Status</a></li>
+        <li><a href="/privacy.html">Privacy Policy</a></li>
+        <li><a href="mailto:admin@jofficial.me">Contact Me</a></li>
+        <li><a href="/diddyscorner/">Diddys Corner...</a></li>
+      </ul>
+    </nav>
     </div>
-  </div>
 </html>
