Updated error pages.

--- a/404.html
+++ b/404.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <link rel="stylesheet" href="/307/style.css">
-        <title>Resource unavailable.</title>
+        <link rel="stylesheet" href="/Moved/style.css">
+        <title>Not found.</title>
     </head>
     <body>
         <div class="container">
             <h1>404</h1>
-            <p>The requested resource was not found. Sorry..</p>
+            <p>The requested resource either does not exist or the request URL is incorrect. Sorry.. (if clicking on a link on this site gave you this error, you can make a report <a href="https://github.com/TheHotRodJayden/jofficial.me/issues" target="_blank">here.</a>)</p>
             </div>
         
     </body>
