added some betterstack status things (Announcments and badges)

--- a/404.html
+++ b/404.html
@@ -3,11 +3,13 @@
     <head>
         <link rel="stylesheet" href="/Moved/style.css">
         <title>Not found.</title>
+        <script src="https://uptime.betterstack.com/widgets/announcement.js" data-id="191679" async="async" type="text/javascript"></script>
     </head>
     <body>
         <div class="container">
             <h1>404</h1>
             <p>The requested resource either does not exist or the request URL is incorrect. Sorry.. (if clicking on a link on this site gave you this error, you can make a report <a href="https://github.com/TheHotRodJayden/jofficial.me/issues" target="_blank">here.</a>)</p>
+            <iframe src="https://status.jofficial.me/badge?theme=dark" width="250" height="30" frameborder="0" scrolling="no" style="color-scheme: normal"></iframe>
             </div>
         
     </body>
