--- a/Moved/index.html
+++ b/Moved/index.html
@@ -3,11 +3,13 @@
     <head>
         <link rel="stylesheet" href="style.css">
         <title>Moved or Broken.</title>
+        <script src="https://uptime.betterstack.com/widgets/announcement.js" data-id="191679" async="async" type="text/javascript"></script>
     </head>
     <body>
         <div class="container">
             <h1>Moved/Unavalible.</h1>
             <p>This page has either been moved or is unavalible. This could be because the page is broken and is currently being fixed or it has been moved temporarily/permanently and the new page has not been setup yet. Please check back later.</p>
+            <iframe src="https://status.jofficial.me/badge?theme=dark" width="250" height="30" frameborder="0" scrolling="no" style="color-scheme: normal"></iframe>
             </div>
         
     </body>
