google analytics thing

--- a/Moved/index.html
+++ b/Moved/index.html
@@ -5,6 +5,15 @@
         <title>Moved or Broken.</title>
         <script src="https://uptime.betterstack.com/widgets/announcement.js" data-id="191679" async="async" type="text/javascript"></script>
     </head>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-HJ13J9KTWG"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-HJ13J9KTWG');
+</script>
     <body>
         <div class="container">
             <h1>Moved/Unavalible.</h1>
