--- a/diddyscorner3/index.html
+++ b/diddyscorner3/index.html
@@ -5,6 +5,15 @@
     <title>diddys corner</title>
     <link rel="stylesheet" href="style.css">
   </head>
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-HJ13J9KTWG"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-HJ13J9KTWG');
+</script>
   <body
     <div class="container">
       <h1>WHY IS THERE SO MUCH BABY OIL?!?!?!?!?!?!?</h1>
