not final, just testing smth

--- a/diddyscorner/index.html
+++ b/diddyscorner/index.html
@@ -9,6 +9,8 @@
     <meta content="https://jofficial.me/images/diddy.png" property="og:image" />
     <meta name="twitter:card" content="summary_large_image">
     <link rel="stylesheet" href="style.css">
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2961846508168640"
+     crossorigin="anonymous"></script>
   </head>
   <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-HJ13J9KTWG"></script>
