A strange dog has appeared, possibly eating some pages... (new 404 page)

--- a/404.html
+++ b/404.html
@@ -16,9 +16,11 @@
 </script>
     <body>
         <div class="container">
-            <h1>404</h1>
-            <p>The requested resource either does not exist or the request URL is incorrect. Sorry.. (if clicking on a link on this site gave you this error, you can make a report <a href="https://github.com/TheHotRodJayden/jofficial.me/issues" target="_blank">here.</a>)</p>
-            <iframe src="https://status.jofficial.me/badge?theme=dark" width="250" height="30" frameborder="0" scrolling="no" style="color-scheme: normal"></iframe>
+            <h1>* Instead of finding the page you were looking for, you found a small white dog... It appears to be sleeping peacefully. 404 - Not Found.</h1>
+            <a href="/" id="homeButton">Home</a>
+            <span id="musicCredit">Sigh of Dog - Toby Fox</span>
+            <button id="musicButton">♪</button>
             </div>
-        
+        <img src="/Moved/dog.jpg" alt="The guy">
+        <script src="/Moved/music.js"></script>
     </body>
