--- a/Moved/index.html
+++ b/Moved/index.html
@@ -17,8 +17,9 @@
     <body>
         <div class="container">
             <h1>Moved/Unavalible.</h1>
-            <p>This page has either been moved or is unavalible. This could be because the page is broken and is currently being fixed or it has been moved temporarily/permanently and the new page has not been setup yet. Please check back later.</p>
+            <p>This page has either been moved or is unavalible. This could be because the page is broken and is currently being fixed or it has been moved temporarily/permanently and the new page has not been setup yet. Please check back later. (yes i havent updated this error page yet go away)</p>
             <iframe src="https://status.jofficial.me/badge?theme=dark" width="250" height="30" frameborder="0" scrolling="no" style="color-scheme: normal"></iframe>
             </div>
         
     </body>
+</html>
