--- a/diddyscornerFinal/index.html
+++ b/diddyscornerFinal/index.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>diddys corner</title>
     <link rel="stylesheet" href="style.css">
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2961846508168640"
-     crossorigin="anonymous"></script>
   </head>
   <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-HJ13J9KTWG"></script>
@@ -21,10 +20,11 @@
       <h1>you can guess what happened after that.</h1>
      <img src="/diddyimages/milk.jpg" alt="diddys dungeon" width="350" height="200">
      <p>you now belong to diddy...</p>
-    <a class="btn" href="https://nc.jofficial.me/index.php/apps/forms/s/zNAyEBsCyaLMNGbHqJCXbjop" target="_blank">
+    <a class="btn" href="/lmfao.html">
     conclude.
     </a>
      
     </div>
   </div>
+  </body>
 </html>
