added simple analytics, fixed some html issues

--- a/diddyscorner6/index.html
+++ b/diddyscorner6/index.html
@@ -1,28 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>diddys corner</title>
-    <link rel="stylesheet" href="style.css">
-  </head>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>diddys corner</title>
+  <link rel="stylesheet" href="style.css">
   <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-HJ13J9KTWG"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-HJ13J9KTWG');
-</script>
-  <body>
-    <div class="container">
-      <h1>You reach a dead end.. Was this a TRAP???</h1>
-     <img src="/diddyimages/wall.jpg" alt="diddys dungeon" width="350" height="200">
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-HJ13J9KTWG"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-HJ13J9KTWG');
+  </script>
+</head>
+<!-- 100% privacy-first analytics -->
+<script async src="https://scripts.simpleanalyticscdn.com/latest.js"></script>
+<body>
+  <div class="container">
+    <h1>You reach a dead end.. Was this a TRAP???</h1>
+    <img src="/diddyimages/wall.jpg" alt="diddys dungeon" width="350" height="200">
     <p>come here BOY. imma get you.</p>
-      <a class="btn" href="/diddyscornerFinal/">
-      Give up.
-      </a>
-     
-    </div>
+    <a class="btn" href="/diddyscornerFinal/">Give up.</a>
   </div>
+</body>
 </html>
