--- a/index.html
+++ b/index.html
@@ -11,29 +11,26 @@
   <meta content="https://jofficial.me/images/diddy.png" property="og:image" />
   <meta name="twitter:card" content="summary_large_image">
   <link rel="stylesheet" href="style.css">
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-HJ13J9KTWG"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-HJ13J9KTWG');
+  </script>
+  <!-- 100% privacy-first analytics -->
+  <script async src="https://scripts.simpleanalyticscdn.com/latest.js"></script>
 </head>
-<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-HJ13J9KTWG"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-HJ13J9KTWG');
-</script>
 <body>
-    <div class="container">
-      <h1>DIDDY GON DIDDLE YOU LIL ZAWG</h1>
-	 <img src="images/diddy.png" alt="ALSO DIDDY????" width="600" height="100">
-	<img src="images/diddy.png" alt="DIDDY ESCAPING :O" width="800" height="345">
-	<h1>DIDDY IS ESCAPING OH GOD RUN</h1>
-  <h1>hmmm whats that second button down there?</h1>
-    <a class="btn" href="https://status.jofficial.me/" target="_blank">
-      Status page
-    </a>
-    <a class="btn" href="diddyscorner/">
-    you sould click this
-    </a>
-    </div>
+  <div class="container">
+    <h1>DIDDY GON DIDDLE YOU LIL ZAWG</h1>
+    <img src="images/diddy.png" alt="ALSO DIDDY????" width="600" height="100">
+    <img src="images/diddy.png" alt="DIDDY ESCAPING :O" width="800" height="345">
+    <h1>DIDDY IS ESCAPING OH GOD RUN</h1>
+    <h1>hmmm whats that second button down there?</h1>
+    <a class="btn" href="https://status.jofficial.me/" target="_blank">Status page</a>
+    <a class="btn" href="diddyscorner/">you sould click this</a>
   </div>
+</body>
 </html>
