--- a/test/index.html
+++ b/test/index.html
@@ -1,8 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <title>ignore</title>
-    </head>
-    <body>
-        <h1>why are you here? there is NOTHING on here. go away</h1>
-    </body>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>ignore</title>
+</head>
+<!-- 100% privacy-first analytics -->
+<script async src="https://scripts.simpleanalyticscdn.com/latest.js"></script>
+<body>
+    <h1>why are you here? there is NOTHING on here. go away</h1>
+</body>
+</html>
