--- a/diddyscorner/index.html
+++ b/diddyscorner/index.html
@@ -1,33 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>diddys corner</title>
-    <meta content="enter diddys corner..." property="og:title" />
-    <meta content="once you enter diddys corner.. you cant go back." property="og:description" />
-    <meta content="#89fc01" data-react-helmet="true" name="theme-color" />
-    <meta content="https://jofficial.me/images/diddy.png" property="og:image" />
-    <meta name="twitter:card" content="summary_large_image">
-    <link rel="stylesheet" href="style.css">
-  </head>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>diddys corner</title>
+  <meta content="enter diddys corner..." property="og:title" />
+  <meta content="once you enter diddys corner.. you cant go back." property="og:description" />
+  <meta content="#89fc01" data-react-helmet="true" name="theme-color" />
+  <meta content="https://jofficial.me/images/diddy.png" property="og:image" />
+  <meta name="twitter:card" content="summary_large_image">
+  <link rel="stylesheet" href="style.css">
   <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-HJ13J9KTWG"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-HJ13J9KTWG');
-</script>
-  <body>
-    <div class="container">
-      <h1>welcome to diddys corner.</h1>
-	 <img src="/diddyimages/diddy.jpg" alt="your friend diddy." width="350" height="200">
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-HJ13J9KTWG"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-HJ13J9KTWG');
+  </script>
+</head>
+<!-- 100% privacy-first analytics -->
+<script async src="https://scripts.simpleanalyticscdn.com/latest.js"></script>
+<body>
+  <div class="container">
+    <h1>welcome to diddys corner.</h1>
+    <img src="/diddyimages/diddy.jpg" alt="your friend diddy." width="350" height="200">
     <p>welcome friend! my name is diddy. why dont you come inside my house?</p>
-	  <a class="btn" href="/diddyscorner2/">
-	  click here to enter his house
-	  </a>
-	 
-    </div>
+    <a class="btn" href="/diddyscorner2/">click here to enter his house</a>
   </div>
+</body>
 </html>
