--- a/diddyscorner2/index.html
+++ b/diddyscorner2/index.html
@@ -1,28 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>diddys corner</title>
-    <link rel="stylesheet" href="style.css">
-  </head>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>diddys corner</title>
+  <link rel="stylesheet" href="style.css">
   <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-HJ13J9KTWG"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-HJ13J9KTWG');
-</script>
-  <body>
-    <div class="container">
-      <h1>inside diddys house...</h1>
-	 <img src="/diddyimages/diddy2.webp" alt="your freind diddy." width="350" height="200">
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-HJ13J9KTWG"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-HJ13J9KTWG');
+  </script>
+</head>
+<!-- 100% privacy-first analytics -->
+<script async src="https://scripts.simpleanalyticscdn.com/latest.js"></script>
+<body>
+  <div class="container">
+    <h1>inside diddys house...</h1>
+    <img src="/diddyimages/diddy2.webp" alt="your freind diddy." width="350" height="200">
     <p>hope you like my house! watch your step though. i spilled some uh... milk and.. water? on the floor. if you want, take some food from the pantry. dont worry about the baby oil.</p>
-	  <a class="btn" href="/diddyscorner3/">
-	  open the pantry..
-	  </a>
-	 
-    </div>
+    <a class="btn" href="/diddyscorner3/">open the pantry..</a>
   </div>
+</body>
 </html>
