--- a/diddyscornerFinal/index.html
+++ b/diddyscornerFinal/index.html
@@ -1,30 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>diddys corner</title>
-    <link rel="stylesheet" href="style.css">
-  </head>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>diddys corner</title>
+  <link rel="stylesheet" href="style.css">
   <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-HJ13J9KTWG"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-HJ13J9KTWG');
-</script>
-  <body>
-    <div class="container">
-      <h1>you can guess what happened after that.</h1>
-     <img src="/diddyimages/milk.jpg" alt="diddys dungeon" width="350" height="200">
-     <p>you now belong to diddy...</p>
-    <a class="btn" href="/lmfao.html">
-    conclude.
-    </a>
-     
-    </div>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-HJ13J9KTWG"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-HJ13J9KTWG');
+  </script>
+</head>
+<!-- 100% privacy-first analytics -->
+<script async src="https://scripts.simpleanalyticscdn.com/latest.js"></script>
+<body>
+  <div class="container">
+    <h1>you can guess what happened after that.</h1>
+    <img src="/diddyimages/milk.jpg" alt="diddys dungeon" width="350" height="200">
+    <p>you now belong to diddy...</p>
+    <a class="btn" href="/lmfao.html">conclude.</a>
   </div>
-  </body>
+</body>
 </html>
