--- a/index.html
+++ b/index.html
@@ -4,25 +4,15 @@
   <script src="https://uptime.betterstack.com/widgets/announcement.js" data-id="191679" async="async" type="text/javascript"></script>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>DIDDY HAZ TAKEN OVER</title>
-  <meta content="click here to FREE DIDDY!" property="og:title" />
-  <meta content="YOU ARE REQUIRED TO CLICK THIS. CLICKING WILL ALSO FREE DIDDY!" property="og:description" />
-  <meta content="#89fc01" data-react-helmet="true" name="theme-color" />
-  <meta content="https://jofficial.me/images/diddy.png" property="og:image" />
-  <meta name="twitter:card" content="summary_large_image">
+  <title>soon.</title>
   <link rel="stylesheet" href="style.css">
   <!-- 100% privacy-first analytics -->
   <script async src="https://scripts.simpleanalyticscdn.com/latest.js"></script>
 </head>
 <body>
   <div class="container">
-    <h1>DIDDY GON DIDDLE YOU LIL ZAWG</h1>
-    <img src="images/diddy.png" alt="ALSO DIDDY????" width="600" height="100">
-    <img src="images/diddy.png" alt="DIDDY ESCAPING :O" width="800" height="345">
-    <h1>DIDDY IS ESCAPING OH GOD RUN</h1>
-    <h1>hmmm whats that second button down there?</h1>
-    <a class="btn" href="https://status.jofficial.me/" target="_blank">Status page</a>
-    <a class="btn" href="diddyscorner/">you sould click this</a>
+    <h1>Under Construction</h1>
+    <p>stay tuned...</p>
   </div>
 </body>
 </html>
